--- a/backEnd/.gitignore
+++ b/backEnd/.gitignore
@@ -2,6 +2,8 @@ HELP.md
 /target/
 !.mvn/wrapper/maven-wrapper.jar
 
+backEnd/src/main/resources/application.properties
+
 ### STS ###
 .apt_generated
 .classpath
