--- a/backEnd/src/main/resources/application.properties
+++ b/backEnd/src/main/resources/application.properties
@@ -1,17 +1,9 @@
-# datasource 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/projetoloja
-spring.datasource.username=ismael
-spring.datasource.password=sicsadm
-spring.datasource.testWhileIdle=true spring.datasource.validationQuery=SELECT 1
-
-# jpa 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-
-# Nova propriedade a partir da versao 2.5 do Spring Boot:
-spring.jpa.defer-datasource-initialization=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/notaIsmael?useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.show-sql=true
-
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
